--- a/themes/butterfly/languages/zh-CN.yml
+++ b/themes/butterfly/languages/zh-CN.yml
@@ -61,6 +61,7 @@ aside:
   card_categories: 分类
   card_tags: 标签
   card_archives: 归档
+  card_friend_link: 通讯录
   card_recent_post: 最新文章
   card_webinfo:
     headline: 网站资讯
