--- a/source/_posts/魔改美化总结-1.md
+++ b/source/_posts/魔改美化总结-1.md
@@ -103,10 +103,10 @@ abbrlink: 20250205mg1
 
 {% folding cyan, 请查看教程内容 %}
 
-一.前言
+1.前言
 因为这部分内容轻笑并没有有关于这个内容，所以我在这里写好了，方便以后查找，喜欢这个风格的可以进行CTRL+C和CTRL+V
 
-二.教程开始
+2.教程开始
 大部分已经有进行标识，对于以后可以进行维护
 ``` CSS
 /* 侧边栏整体卡片样式调整 */
@@ -185,10 +185,10 @@ abbrlink: 20250205mg1
 {% link 轻笑Chuckle,漫天倾尘 风中轻笑,https://qcqx.cn/ %}
 {% folding cyan, 请查看教程内容 %}
 
-一.前言
+1.前言
 因为这部分内容轻笑并没有有关于这个内容，所以我在这里写好了，方便以后查找，喜欢这个风格的可以进行CTRL+C和CTRL+V
 
-二.教程开始
+2.在[BlogRoot]\source\css下新建自定义css并粘贴：
 ``` CSS
 /* 首页文章卡片样式表调整 */
 #recent-posts > .recent-post-item >.recent-post-info > .article-title {
