--- a/source/_posts/关于本站页面美化（重制版）.md
+++ b/source/_posts/关于本站页面美化（重制版）.md
@@ -10,7 +10,7 @@ top_img: false
 tags:
   - hexo
   - butterfly
-abbrlink: 36435
+abbrlink: a19bb7fbT
 ---
 
 ## 前言
@@ -19,7 +19,7 @@ abbrlink: 36435
 ## 实现
 
 ### 效果
-![效果](about.png)
+![效果](https://sourceimage.s3.bitiful.net/post/img/%E5%85%B3%E4%BA%8E%E9%A1%B5%E9%9D%A2%E7%BE%8E%E5%8C%96/about.avif?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=X8fla5EwxMzIjQ0aDNQLjk44%2F20250324%2F%2Fs3%2Faws4_request&X-Amz-Date=20250324T060009Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&x-id=GetObject&X-Amz-Signature=08f918581ba237608c52368cccebaa70f6ebc79c39c0446aca27f140de364e93)
 
 ### 覆盖PUG文件内容
 1.覆盖** \themes\butterfly\layout\includes\page\about.pug（如果没有就新建）: **
