--- a/source/_posts/魔改美化总结-2.md
+++ b/source/_posts/魔改美化总结-2.md
@@ -38,7 +38,7 @@ abbrlink: 20250207mg2
 
 {% note info flat %}
 本质就是用的sessionStorage这个本地存储对象去确定是不是同一个会话，如果是同一个的话，就弹窗一次，如果下次进来了就不是同一个会话了，又会弹窗一次
-{% note info flat %}
+{% endnote %}
 
 1.新建[BlogRoot]\source\js\day.js，并写入以下代码，这里公祭日灰度我设置的为60%：
 ```JS
