--- a/source/_posts/归档-分类-标签三个页面美化以及信息介绍（轻笑重制版）.md
+++ b/source/_posts/归档-分类-标签三个页面美化以及信息介绍（轻笑重制版）.md
@@ -231,6 +231,6 @@ mixin articleSort(posts)
 
 ## 后续
 如果你已经按照上面的方案进行修改，就会出现这样子：
-![归档](https://sourceimage.s3.bitiful.net/post/img/%E5%BD%92%E6%A1%A3%E3%80%81%E5%88%86%E7%B1%BB%E3%80%81%E6%A0%87%E7%AD%BE%E9%A1%B5%E6%96%87%E7%AB%A0%E5%8D%A1%E7%89%87%E5%8A%A0%E4%B8%8A%E6%89%80%E5%B1%9E%E5%88%86%E7%B1%BB%E5%92%8C%E6%A0%87%E7%AD%BE%E4%BB%A5%E5%8F%8A%E7%BE%8E%E5%8C%96%E9%A1%B5%E9%9D%A2%EF%BC%88%E8%BD%BB%E7%AC%91%E7%89%88%E6%9C%AC%E9%87%8D%E5%88%B6%E7%89%88%EF%BC%89/1.avif?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=X8fla5EwxMzIjQ0aDNQLjk44%2F20250324%2F%2Fs3%2Faws4_request&X-Amz-Date=20250324T055941Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&x-id=GetObject&X-Amz-Signature=920782e61b5d40d8b800afa72cf98320b4df8cd2bbf4fe695eeb321c56cfbb76)
-![分类文章](https://sourceimage.s3.bitiful.net/post/img/%E5%BD%92%E6%A1%A3%E3%80%81%E5%88%86%E7%B1%BB%E3%80%81%E6%A0%87%E7%AD%BE%E9%A1%B5%E6%96%87%E7%AB%A0%E5%8D%A1%E7%89%87%E5%8A%A0%E4%B8%8A%E6%89%80%E5%B1%9E%E5%88%86%E7%B1%BB%E5%92%8C%E6%A0%87%E7%AD%BE%E4%BB%A5%E5%8F%8A%E7%BE%8E%E5%8C%96%E9%A1%B5%E9%9D%A2%EF%BC%88%E8%BD%BB%E7%AC%91%E7%89%88%E6%9C%AC%E9%87%8D%E5%88%B6%E7%89%88%EF%BC%89/2.avif?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=X8fla5EwxMzIjQ0aDNQLjk44%2F20250324%2F%2Fs3%2Faws4_request&X-Amz-Date=20250324T055952Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&x-id=GetObject&X-Amz-Signature=cd27765110e679e752aab40f8d560abc1157221f06eab5c3d24aff99c404096b)
-![标签文章](https://sourceimage.s3.bitiful.net/post/img/%E5%BD%92%E6%A1%A3%E3%80%81%E5%88%86%E7%B1%BB%E3%80%81%E6%A0%87%E7%AD%BE%E9%A1%B5%E6%96%87%E7%AB%A0%E5%8D%A1%E7%89%87%E5%8A%A0%E4%B8%8A%E6%89%80%E5%B1%9E%E5%88%86%E7%B1%BB%E5%92%8C%E6%A0%87%E7%AD%BE%E4%BB%A5%E5%8F%8A%E7%BE%8E%E5%8C%96%E9%A1%B5%E9%9D%A2%EF%BC%88%E8%BD%BB%E7%AC%91%E7%89%88%E6%9C%AC%E9%87%8D%E5%88%B6%E7%89%88%EF%BC%89/3.avif?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=X8fla5EwxMzIjQ0aDNQLjk44%2F20250324%2F%2Fs3%2Faws4_request&X-Amz-Date=20250324T055958Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&x-id=GetObject&X-Amz-Signature=2b03638cf2c15f213d80ddc63a0e7bccf4fb4f87c5fd7e13fd170266b5ae4bae)
+![归档](https://sourceimage.s3.bitiful.net/post%2Fimg%2F%E5%BD%92%E6%A1%A3%E3%80%81%E5%88%86%E7%B1%BB%E3%80%81%E6%A0%87%E7%AD%BE%E9%A1%B5%E6%96%87%E7%AB%A0%E5%8D%A1%E7%89%87%E5%8A%A0%E4%B8%8A%E6%89%80%E5%B1%9E%E5%88%86%E7%B1%BB%E5%92%8C%E6%A0%87%E7%AD%BE%E4%BB%A5%E5%8F%8A%E7%BE%8E%E5%8C%96%E9%A1%B5%E9%9D%A2%EF%BC%88%E8%BD%BB%E7%AC%91%E7%89%88%E6%9C%AC%E9%87%8D%E5%88%B6%E7%89%88%EF%BC%89%2F1.avif)
+![分类文章](https://sourceimage.s3.bitiful.net/post%2Fimg%2F%E5%BD%92%E6%A1%A3%E3%80%81%E5%88%86%E7%B1%BB%E3%80%81%E6%A0%87%E7%AD%BE%E9%A1%B5%E6%96%87%E7%AB%A0%E5%8D%A1%E7%89%87%E5%8A%A0%E4%B8%8A%E6%89%80%E5%B1%9E%E5%88%86%E7%B1%BB%E5%92%8C%E6%A0%87%E7%AD%BE%E4%BB%A5%E5%8F%8A%E7%BE%8E%E5%8C%96%E9%A1%B5%E9%9D%A2%EF%BC%88%E8%BD%BB%E7%AC%91%E7%89%88%E6%9C%AC%E9%87%8D%E5%88%B6%E7%89%88%EF%BC%89%2F2.avif)
+![标签文章](https://sourceimage.s3.bitiful.net/post%2Fimg%2F%E5%BD%92%E6%A1%A3%E3%80%81%E5%88%86%E7%B1%BB%E3%80%81%E6%A0%87%E7%AD%BE%E9%A1%B5%E6%96%87%E7%AB%A0%E5%8D%A1%E7%89%87%E5%8A%A0%E4%B8%8A%E6%89%80%E5%B1%9E%E5%88%86%E7%B1%BB%E5%92%8C%E6%A0%87%E7%AD%BE%E4%BB%A5%E5%8F%8A%E7%BE%8E%E5%8C%96%E9%A1%B5%E9%9D%A2%EF%BC%88%E8%BD%BB%E7%AC%91%E7%89%88%E6%9C%AC%E9%87%8D%E5%88%B6%E7%89%88%EF%BC%89%2F3.avif)
