--- a/source/_posts/魔改美化总结-1.md
+++ b/source/_posts/魔改美化总结-1.md
@@ -22,14 +22,14 @@ abbrlink: 20250205mg1
 5.本帖基于Butterfly主题进行魔改方案编写，因此请读者优先掌握Butterfly主题官方文档的内容后再来进行魔改。
 6.魔改会过程常常引入自定义的css与js文件，方法见Hexo博客添加自定义css和js文件(后续引入)
 **博客搭建与魔改系列教程导航🚥🚥🚥**
-1.[🥬Hexo博客搭建基础教程(一)](https://www.sxiaohe.top/posts/20250205jc1.html)
-2.[🍒Hexo博客搭建基础教程(二)](https://www.sxiaohe.top/posts/20250205jc2.html)
-3.[🥪Hexo博客搭建基础教程(三)](https://www.sxiaohe.top/posts/20250205jc3.html)
-4.[🍀博客魔改教程总结(一)](https://www.sxiaohe.top/posts/20250205mg1.html) ⇦当前位置🪂
-5.[🍚博客魔改教程总结(二)](https://www.sxiaohe.top/posts/20250207mg2.html)
-6.[🎋博客魔改教程总结(三)](https://www.sxiaohe.top/posts/20250208mg3.html)
-7.[🥕博客魔改教程总结(四)](https://www.sxiaohe.top/posts/20250205mg4.html)
-8.[🍊博客魔改教程总结(五)](https://www.sxiaohe.top/posts/20250205mg5.html)
+1.[🥬Hexo博客搭建基础教程(一)](https://www.myxz.top/posts/20250205jc1.html)
+2.[🍒Hexo博客搭建基础教程(二)](https://www.myxz.top/posts/20250205jc2.html)
+3.[🥪Hexo博客搭建基础教程(三)](https://www.myxz.top/posts/20250205jc3.html)
+4.[🍀博客魔改教程总结(一)](https://www.myxz.top/posts/20250205mg1.html) ⇦当前位置🪂
+5.[🍚博客魔改教程总结(二)](https://www.myxz.top/posts/20250207mg2.html)
+6.[🎋博客魔改教程总结(三)](https://www.myxz.top/posts/20250208mg3.html)
+7.[🥕博客魔改教程总结(四)](https://www.myxz.top/posts/20250205mg4.html)
+8.[🍊博客魔改教程总结(五)](https://www.myxz.top/posts/20250205mg5.html)
 {% endnote %}
 
 ## 仿轻笑博客背景美化
@@ -67,7 +67,7 @@ abbrlink: 20250205mg1
     background-repeat: no-repeat;
 }
 #svg_bg {
-    background-image: url(https://www.sxiaohe.top/img/background.svg);
+    background-image: url(https://www.myxz.top/img/background.svg);
     -webkit-background-size: initial;
     -moz-background-size: initial;
     background-size: initial;
@@ -86,13 +86,13 @@ abbrlink: 20250205mg1
 {% link butterfly导航栏修改方案(自用方案),安知鱼,https://blog.anheyu.com/posts/8e53.html %}
 {% link 关于Butterfly的导航栏的一些教程,Ariasakaの小窝,https://blog.yaria.top/posts/895003b5 %}
 {% link Butterfly的魔改教程：导航栏魔改美化,Meuicat,https://meuicat.com/posts/2dbd58d6.html %}
-{% link butterfly导航栏修改方案,苏晓河,https://www.sxiaohe.top/posts/36435.html %}
+{% link butterfly导航栏修改方案,莫言小栈,https://www.myxz.top/posts/36435.html %}
 
 ## 图标引入
 这里分为两种不同位置的自定义iconfont图标
 **导航栏添加**
 {% link 菜单栏多色动态图标（店长）,Fomalhaut🥝,https://www.fomal.cc/posts/5389e93f.html#%E5%BC%95%E5%85%A5iconfont%E8%87%AA%E5%AE%9A%E4%B9%89%E5%9B%BE%E6%A0%87%EF%BC%88%E5%BA%97%E9%95%BF%EF%BC%89 %}
-{% link 菜单栏多色动态图标,苏晓河,https://www.fomal.cc/ %}
+{% link 菜单栏多色动态图标,莫言小栈,https://www.fomal.cc/ %}
 
 **社交添加**
 {% link Social卡片彩色图标引入（店长）,Fomalhaut🥝,https://www.fomal.cc/posts/5389e93f.html#Social%E5%8D%A1%E7%89%87%E5%BD%A9%E8%89%B2%E5%9B%BE%E6%A0%87%E5%BC%95%E5%85%A5%EF%BC%88%E5%BA%97%E9%95%BF%EF%BC%89 %}
@@ -248,7 +248,7 @@ abbrlink: 20250205mg1
 {% link 轻笑Chuckle,漫天倾尘 风中轻笑,https://qcqx.cn/ %}
 
 **教程地址**
-{% link Banner随机文章展示(轻笑同款),苏晓河,https://www.sxiaohe.top/posts/18108.html %}
+{% link Banner随机文章展示(轻笑同款),莫言小栈,https://www.myxz.top/posts/18108.html %}
 
 ## 首页文章隐藏文字
 **效果来源**
@@ -632,7 +632,7 @@ window.refreshFn = function () {
 {% link 轻笑Chuckle,漫天倾尘 风中轻笑,https://qcqx.cn/ %}
 
 **教程地址**
-{% link 底部美化（图标）,苏晓河,https://www.sxiaohe.top/posts/10001kf.html %}
+{% link 底部美化（图标）,莫言小栈,https://www.myxz.top/posts/10001kf.html %}
 
 ## 友链朋友圈后端部署
 
@@ -642,8 +642,8 @@ window.refreshFn = function () {
 
 ## 友链朋友圈前端部署(旧朋友圈)
 
-{% link 友链朋友圈前端部署方案,苏晓河,https://www.sxiaohe.top/posts/2901kf.html %}
+{% link 友链朋友圈前端部署方案,莫言小栈,https://www.myxz.top/posts/2901kf.html %}
 
 ## 主流说说部署
 
-{% link 即刻短文的三种部署方案,苏晓河,https://www.sxiaohe.top/posts/2900kf.html %}
+{% link 即刻短文的三种部署方案,莫言小栈,https://www.myxz.top/posts/2900kf.html %}
