--- a/source/_posts/魔改美化总结-2.md
+++ b/source/_posts/魔改美化总结-2.md
@@ -21,14 +21,14 @@ abbrlink: 20250207mg2
 5.本帖基于Butterfly主题进行魔改方案编写，因此请读者优先掌握Butterfly主题官方文档的内容后再来进行魔改。
 6.魔改会过程常常引入自定义的css与js文件，方法见Hexo博客添加自定义css和js文件(后续引入)
 **博客搭建与魔改系列教程导航🚥🚥🚥**
-1.[🥬Hexo博客搭建基础教程(一)](https://www.sxiaohe.top/posts/20250205jc1.html)
-2.[🍒Hexo博客搭建基础教程(二)](https://www.sxiaohe.top/posts/20250205jc2.html)
-3.[🥪Hexo博客搭建基础教程(三)](https://www.sxiaohe.top/posts/20250205jc3.html)
-4.[🍀博客魔改教程总结(一)](https://www.sxiaohe.top/posts/20250205mg1.html)
-5.[🍚博客魔改教程总结(二)](https://www.sxiaohe.top/posts/20250207mg2.html) ⇦当前位置🪂
-6.[🎋博客魔改教程总结(三)](https://www.sxiaohe.top/posts/20250208mg3.html)
-7.[🥕博客魔改教程总结(四)](https://www.sxiaohe.top/posts/20250205mg4.html)
-8.[🍊博客魔改教程总结(五)](https://www.sxiaohe.top/posts/20250205mg5.html)
+1.[🥬Hexo博客搭建基础教程(一)](https://www.myxz.top/posts/20250205jc1.html)
+2.[🍒Hexo博客搭建基础教程(二)](https://www.myxz.top/posts/20250205jc2.html)
+3.[🥪Hexo博客搭建基础教程(三)](https://www.myxz.top/posts/20250205jc3.html)
+4.[🍀博客魔改教程总结(一)](https://www.myxz.top/posts/20250205mg1.html)
+5.[🍚博客魔改教程总结(二)](https://www.myxz.top/posts/20250207mg2.html) ⇦当前位置🪂
+6.[🎋博客魔改教程总结(三)](https://www.myxz.top/posts/20250208mg3.html)
+7.[🥕博客魔改教程总结(四)](https://www.myxz.top/posts/20250205mg4.html)
+8.[🍊博客魔改教程总结(五)](https://www.myxz.top/posts/20250205mg5.html)
 {% endnote %}
 
 ## 节日弹窗与公祭日变灰(fomal)
@@ -292,3 +292,5 @@ nav#pagination {
 {% endfolding %}
 
 ## 归档、分类、标签页文章卡片加上所属分类和标签（轻笑）
+
+{% link 归档、分类、标签页文章卡片加上所属分类和标签以及美化页面,莫言小栈,https://www.myxz.top/posts/a19bb7fb.html %}
