--- a/source/_posts/搭建基础教程-1.md
+++ b/source/_posts/搭建基础教程-1.md
@@ -2,13 +2,14 @@
 title: Hexo博客搭建基础教程(一)
 description: 从零开始搭建博客
 date: '2025-02-07 8:00'
-cover: https://sourceimage.s3.bitiful.net/img/default_cover_23.avif
+cover: 'https://sourceimage.s3.bitiful.net/img/default_cover_23.avif'
 category:
   - hexo
 tags:
   - hexo
   - 搭建
 top_img: false
+abbrlink: 20250205jc1
 ---
 ## 搭建环境
 本文分为本机搭建和云端构建，本机搭建通过在本地搭建好必备环境配备代理工具以及上传仓库；而云端构建通过使用github action来进行操作，用写好的yml代码来进行构建。
@@ -209,7 +210,7 @@ C:\Users\ASUS>git remote add origin https://github.com/661111/ACTION.git
 C:\Users\ASUS>git push -u origin main
 ```
 github页面如图，已经创建好了：
-![alt text](https://sourceimage.s3.bitiful.net/post%2Fimg%2F%E6%90%AD%E5%BB%BAhexo%E5%8D%9A%E5%AE%A2%2Faction.png)
+![alt text](https://sourceimage.s3.bitiful.net/post%2Fimg%2F53084%2F1.avif)
 
 #### 部署到github存储库
 1.安装 hexo-deployer-git：
@@ -298,7 +299,132 @@ branch 'master' set up to track 'https://github.com/661111/ACTION.git/main'.
 INFO  Deploy done: git
 ```
 5.打开存储库，可以看到页面出现许多文件：
-![alt text](https://sourceimage.s3.bitiful.net/post%2Fimg%2F%E6%90%AD%E5%BB%BAhexo%E5%8D%9A%E5%AE%A2%2Faction-1.png)
+![alt text](https://sourceimage.s3.bitiful.net/post%2Fimg%2F53084%2F2.avif)
 
 ## 云端构建
 说完本机搭建，那么说说云端构建吧。其实云端构建就是本地有一份已经修改完但还没有发布到存储库，而存储库存储着之前的文件，相当于一份备份，当我们修改完发表到云端。先上传到存储库，存储库里的文件更新后自动触发action，成功后存储库和服务器上的博客会自动更新，vercel会开始构建静态文件，就可以看到新内容了。
+[](https://sourceimage.s3.bitiful.net/post%2Fimg%2F53084%2Fdeploy.avif)
+
+### 开始之前
+{% note info flat %}
+为了确保交由Github Action来持续部署时，Github Action 具备足够的权限来进行 hexo deploy 操作,需要先获取 Token。
+{% endnote %}
+
+{% tabs 分栏 %}
+<!-- tab GITHUB -->
+
+访问 Github->头像（右上角）->Settings->Developer Settings->Personal access tokens->generate new token,创建的 Token 名称随意，但必须勾选 repo 项 和 workflows 项。
+[](https://cdn.cbd.int/anzhiyu-static@1.0.0/img/01/01.png)
+[](https://cdn.cbd.int/anzhiyu-static@1.0.0/img/01/02.png)
+[](https://cdn.cbd.int/anzhiyu-static@1.0.0/img/01/03.png)
+<!-- endtab -->
+{% endtabs %}
+
+### 新建action工作流
+在[Blogroot]新建.github文件夹,注意开头是有个.的。然后在.github 内新建 workflows 文件夹，再在 workflows 文件夹内新建 autodeploy.yml,在[Blogroot]/.github/workflows/autodeploy.yml 里面输入：
+``` YML
+name: 自动部署
+on:
+  push:
+    branches:
+      - main
+  release:
+    types:
+      - published
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 检查分支
+        uses: actions/checkout@v2
+        with:
+          ref: main
+
+      - name: 安装 Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: "22.13.0"
+
+      - name: 安装 Hexo
+        run: |
+          export TZ='Asia/Shanghai'
+          npm install hexo-cli -g
+      - name: 缓存 Hexo
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - name: 安装依赖
+        if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        run: |
+          npm install --global gulp-cli
+          npm update hexo --save
+          npm install --save
+
+      - name: 生成静态文件
+        run: |
+          hexo clean
+          hexo generate
+          gulp
+
+      - name: 推送到Github仓库
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          token: ${{ secrets.HEXO_TOKEN }}
+          repository-name: 661111/hexo-site-page
+          branch: main
+          folder: public
+          commit-message: "${{ github.event.head_commit.message }} Updated By Github Actions"
+```
+之后需要自己到仓库的 Settings->Secrets->actions 下添加环境变量，变量名参考表格：
+{% note info flat %}
+如何添加：
+[](https://cdn.cbd.int/anzhiyu-static@1.0.0/img/01/06.png)
+{% endnote %}
+
+|参数         |  参数内容         |     是否需要     |
+|-------------|------------------|-----------------|
+|HEXO_TOKEN   |  github账号密钥  |       ✅        |
+
+### 部署云端
+1.添加屏蔽项
+因为能够使用指令进行安装的内容不包括在需要提交的源码内，所有我们需要将这些内容添加到屏蔽项，表示不上传到 github 上。这样可以显著减少需要提交的文件量和加快提交速度。
+打开[Blogroot]/.gitignore,输入以下内容：
+``` GITIGNORE
+.DS_Store
+Thumbs.db
+db.json
+*.log
+node_modules/
+public/
+.deploy*/
+.deploy_git*/
+.idea
+themes/[改成你自己的主题名称]/.git
+```
+2.提交源码到私有仓库[SourceRepo]
+在博客根目录[Blogroot]下启动终端，使用 git 指令重设仓库地址。这样在新建仓库，我们仍旧可以保留珍贵的 commit history，便于版本回滚。
+``` BASH
+git remote rm origin # 删除原有仓库链接
+git remote add origin https://github.com/[GithubUsername]/[SourceRepo].git #[SourceRepo]为新的存放源码的github私有仓库
+git checkout -b main # 切换到main分支，
+git add .
+git commit -m "github action update"
+git push origin main
+```
+
+3.查看部署情况
+打开 GIthub 存放源码的私有仓库，找到 action。
+![1](https://sourceimage.s3.bitiful.net/post%2Fimg%2F53084%2F3.avif)
+根据刚刚的 Commit 记录找到相应的任务
+![2](https://sourceimage.s3.bitiful.net/post%2Fimg%2F53084%2F4.avif)
+点击 Deploy 查看部署情况,如果看到全部打勾，即为成功
+![3](https://sourceimage.s3.bitiful.net/post%2Fimg%2F53084%2F5.avif)
