--- a/source/_posts/关于本站页面美化（重制版）.md
+++ b/source/_posts/关于本站页面美化（重制版）.md
@@ -22,7 +22,7 @@ abbrlink: a19bb7fbT
 ![效果](https://sourceimage.s3.bitiful.net/post%2Fimg%2F%E5%85%B3%E4%BA%8E%E9%A1%B5%E9%9D%A2%E7%BE%8E%E5%8C%96%2F1.avif)
 
 ### 覆盖PUG文件内容
-1.覆盖** \themes\butterfly\layout\includes\page\about.pug（如果没有就新建）: **
+1. 覆盖 \themes\butterfly\layout\includes\page\about.pug（如果没有就新建）: 
 
 ``` PUG
 #about-page
@@ -461,7 +461,7 @@ script.
 ```
 
 ### 添加css
-这里使用的是来自于安知鱼的css代码，为了可以后续方便一些，所以写在这里
+1. 这里使用的是来自于安知鱼的css代码，为了可以后续方便一些，所以写在这里
 
 ```css
 #gitcalendar {
