--- a/source/_posts/搭建基础教程-1.md
+++ b/source/_posts/搭建基础教程-1.md
@@ -26,10 +26,10 @@ GitHub 帐号
 云服务器（可选）
 
 ### 下载node并简单切换镜像源
-1.打开Node官网，下载和自己系统相配的Node的安装程序。下载地址：[https://nodejs.org/en/download/](https://nodejs.org/en/download/)
-2.下载后安装，安装的目录可以使用默认目录【C:/Program Files/nodejs/】，也可以自定义路径。这个环境路径切换坑也很多，如果大家C盘空间足够可以直接装C盘，如果想切换其他盘或者把环境遍历切换到自定义路径也可以，具体教程百度(不过坑比较多就是了)!
-3.安装完成后，检查是否安装成功。在键盘按下win + R键，输入CMD，然后回车，打开CMD窗口，执行node -v命令，看到版本信息，则说明安装成功。
-4.切换npm源：
+1. 打开Node官网，下载和自己系统相配的Node的安装程序。下载地址：[https://nodejs.org/en/download/](https://nodejs.org/en/download/)
+2. 下载后安装，安装的目录可以使用默认目录【C:/Program Files/nodejs/】，也可以自定义路径。这个环境路径切换坑也很多，如果大家C盘空间足够可以直接装C盘，如果想切换其他盘或者把环境遍历切换到自定义路径也可以，具体教程百度(不过坑比较多就是了)!
+3. 安装完成后，检查是否安装成功。在键盘按下win + R键，输入CMD，然后回车，打开CMD窗口，执行node -v命令，看到版本信息，则说明安装成功。
+4. 切换npm源：
 {% tabs 分栏 %}
 <!-- tab 官方源 -->
 ``` BASH
@@ -87,11 +87,11 @@ added 48 packages in 4s
 </div>
 
 ### Git安装
-1.进入官网：[https://git-scm.com/downloads](https://git-scm.com/downloads) ，由于官网下载太慢可以通过淘宝的开源镜像下载 网址：[https://registry.npmmirror.com/binary.html?path=git-for-windows/v2.36.1.windows.1/](https://registry.npmmirror.com/binary.html?path=git-for-windows/v2.36.1.windows.1/) ，下载版本更具自己的需求选择即可。
+1. 进入官网：[https://git-scm.com/downloads](https://git-scm.com/downloads) ，由于官网下载太慢可以通过淘宝的开源镜像下载 网址：[https://registry.npmmirror.com/binary.html?path=git-for-windows/v2.36.1.windows.1/](https://registry.npmmirror.com/binary.html?path=git-for-windows/v2.36.1.windows.1/) ，下载版本更具自己的需求选择即可。
 
-2.下载后傻瓜式安装Git即可，安装的目录可以使用默认目录【C:/Program Files/Git】，也可以自定义路径。
+2. 下载后傻瓜式安装Git即可，安装的目录可以使用默认目录【C:/Program Files/Git】，也可以自定义路径。
 
-3.点击电脑左下角开始即可看见Git Bash。
+3. 点击电脑左下角开始即可看见Git Bash。
 
 [git快捷方式](https://sourceimage.s3.bitiful.net/post%2Fimg%2F%E6%90%AD%E5%BB%BAhexo%E5%8D%9A%E5%AE%A2%2F627d410ddc940.webp)
 
@@ -99,27 +99,27 @@ added 48 packages in 4s
 - Git Bash 是linux系统的指令风格（建议使用）
 - Git GUI是图形化界面（新手学习不建议使用）
 
-4.常用命令
+4. 常用命令
 ``` BASH
 git config -l  //查看所有配置
 git config --system --list //查看系统配置
 git config --global --list //查看用户（全局）配置
 ```
 
-5.配置用户名和邮箱:
+5. 配置用户名和邮箱:
 ``` BASH
 git config --global user.name "你的用户名"
 git config --global user.email "你的邮箱"
 ```
 
-6.查看git当前配置：
+6. 查看git当前配置：
 ``` BASH
 git config -l
 ```
 
 ### 部署博客
 #### 初始化hexo
-1.在目标路径（我这里选的路径为【D:/sxiaohe/sxiaohe】）打开cmd命令窗口，执行hexo init初始化项目。
+1. 在目标路径（我这里选的路径为【D:/sxiaohe/sxiaohe】）打开cmd命令窗口，执行hexo init初始化项目。
 ``` BASH
 hexo init blog-demo
 ```
@@ -133,7 +133,7 @@ warning hexo-renderer-stylus > stylus > glob@7.2.3: Glob versions prior to v9 ar
 warning hexo-renderer-stylus > stylus > glob > inflight@1.0.6: This module is not supported, and leaks memory. Do not use it. Check out lru-cache if you want a good and tested way to coalesce async requests by a key value, which is much more comprehensive and powerful.
 INFO  Start blogging with Hexo!
 ```
-2.进入blog-demo ，输入npm i安装相关依赖:
+2. 进入blog-demo ，输入npm i安装相关依赖:
 ``` BASH
 cd blog-demo  //进入blog-demo文件夹
 npm i
@@ -147,7 +147,7 @@ changed 16 packages, and audited 228 packages in 3s
 
 found 0 vulnerabilities
 ```
-3.初始化项目后，blog-demo有如下结构：
+3. 初始化项目后，blog-demo有如下结构：
 ``` MARKDOWN
 |-- blog-demo
     |-- .gitignore
@@ -177,7 +177,7 @@ found 0 vulnerabilities
 【_config.landscape.yml】：主题的配置文件
 【config.yml】：博客的配置文件
 【package.json】：项目名称、描述、版本、运行和开发等信息
-4.输入hexo server或者hexo s 启动项目，启动成功终端会出现以下内容：
+4. 输入hexo server或者hexo s 启动项目，启动成功终端会出现以下内容：
 ``` BASH
 INFO  Validating config
 INFO  Start processing
@@ -185,7 +185,7 @@ INFO  Hexo is running at http://localhost:4000/ . Press Ctrl+C to stop.
 ```
 #### 初始化github存储库
 当我们新建存储库后，需要对存储库进行初始化
-1.在bash中键入以下代码，初始化存储库：
+1. 在bash中键入以下代码，初始化存储库：
 ``` BASH
 echo "# ACTION" >> README.md
 git init
@@ -209,15 +209,15 @@ C:\Users\ASUS>git branch -M main
 C:\Users\ASUS>git remote add origin https://github.com/661111/ACTION.git
 C:\Users\ASUS>git push -u origin main
 ```
-github页面如图，已经创建好了：
+2. github页面如图，已经创建好了：
 ![alt text](https://sourceimage.s3.bitiful.net/post%2Fimg%2F53084%2F1.avif)
 
 #### 部署到github存储库
-1.安装 hexo-deployer-git：
+1. 安装 hexo-deployer-git：
 ``` BASH
 npm install hexo-deployer-git --save
 ```
-2.修改 _config.yml 文件
+2. 修改 _config.yml 文件
 在blog-demo目录下的_config.yml，就是整个Hexo框架的配置文件了。可以在里面修改大部分的配置。详细可参考官方的配置描述。
 修改最后一行的配置，将repository修改为你自己的github项目地址即可，还有分支要改为main代表主分支（注意缩进）。
 ``` YML
@@ -226,7 +226,7 @@ deploy:
   repository: https://github.com/661111/ACTION.git
   branch: main
 ```
-3.修改好配置后，运行如下命令，将代码部署到 GitHub（Hexo三连）:
+3. 修改好配置后，运行如下命令，将代码部署到 GitHub（Hexo三连）:
 ``` bash
 hexo clean && hexo generate && hexo deploy  // Git BASH终端
 hexo clean; hexo generate; hexo deploy  // VSCODE终端
@@ -298,7 +298,7 @@ To https://github.com/661111/ACTION.git
 branch 'master' set up to track 'https://github.com/661111/ACTION.git/main'.
 INFO  Deploy done: git
 ```
-5.打开存储库，可以看到页面出现许多文件：
+5. 打开存储库，可以看到页面出现许多文件：
 ![alt text](https://sourceimage.s3.bitiful.net/post%2Fimg%2F53084%2F2.avif)
 
 ## 云端构建
@@ -312,8 +312,8 @@ INFO  Deploy done: git
 
 {% tabs 分栏 %}
 <!-- tab GITHUB -->
-
 访问 Github->头像（右上角）->Settings->Developer Settings->Personal access tokens->generate new token,创建的 Token 名称随意，但必须勾选 repo 项 和 workflows 项。
+
 [](https://cdn.cbd.int/anzhiyu-static@1.0.0/img/01/01.png)
 [](https://cdn.cbd.int/anzhiyu-static@1.0.0/img/01/02.png)
 [](https://cdn.cbd.int/anzhiyu-static@1.0.0/img/01/03.png)
@@ -321,7 +321,7 @@ INFO  Deploy done: git
 {% endtabs %}
 
 ### 新建action工作流
-在[Blogroot]新建.github文件夹,注意开头是有个.的。然后在.github 内新建 workflows 文件夹，再在 workflows 文件夹内新建 autodeploy.yml,在[Blogroot]/.github/workflows/autodeploy.yml 里面输入：
+1. 在[Blogroot]新建.github文件夹,注意开头是有个.的。然后在.github 内新建 workflows 文件夹，再在 workflows 文件夹内新建 autodeploy.yml,在[Blogroot]/.github/workflows/autodeploy.yml 里面输入：
 ``` YML
 name: 自动部署
 on:
@@ -384,7 +384,7 @@ jobs:
           folder: public
           commit-message: "${{ github.event.head_commit.message }} Updated By Github Actions"
 ```
-之后需要自己到仓库的 Settings->Secrets->actions 下添加环境变量，变量名参考表格：
+2. 之后需要自己到仓库的 Settings->Secrets->actions 下添加环境变量，变量名参考表格：
 {% note info flat %}
 如何添加：
 [](https://cdn.cbd.int/anzhiyu-static@1.0.0/img/01/06.png)
@@ -395,7 +395,7 @@ jobs:
 |HEXO_TOKEN   |  github账号密钥  |       ✅        |
 
 ### 部署云端
-1.添加屏蔽项
+1. 添加屏蔽项
 因为能够使用指令进行安装的内容不包括在需要提交的源码内，所有我们需要将这些内容添加到屏蔽项，表示不上传到 github 上。这样可以显著减少需要提交的文件量和加快提交速度。
 打开[Blogroot]/.gitignore,输入以下内容：
 ``` GITIGNORE
@@ -410,7 +410,7 @@ public/
 .idea
 themes/[改成你自己的主题名称]/.git
 ```
-2.提交源码到私有仓库[SourceRepo]
+2. 提交源码到私有仓库[SourceRepo]
 在博客根目录[Blogroot]下启动终端，使用 git 指令重设仓库地址。这样在新建仓库，我们仍旧可以保留珍贵的 commit history，便于版本回滚。
 ``` BASH
 git remote rm origin # 删除原有仓库链接
@@ -420,11 +420,18 @@ git add .
 git commit -m "github action update"
 git push origin main
 ```
-
-3.查看部署情况
+3. 查看部署情况
 打开 GIthub 存放源码的私有仓库，找到 action。
 ![1](https://sourceimage.s3.bitiful.net/post%2Fimg%2F53084%2F3.avif)
 根据刚刚的 Commit 记录找到相应的任务
 ![2](https://sourceimage.s3.bitiful.net/post%2Fimg%2F53084%2F4.avif)
 点击 Deploy 查看部署情况,如果看到全部打勾，即为成功
 ![3](https://sourceimage.s3.bitiful.net/post%2Fimg%2F53084%2F5.avif)
+
+4. 如果在有加速的情况下有时候无法正常上传，可以再追加命令行:
+``` BASH
+git add .
+git commit -m "github action update"
+git rebase --continue
+git push -f origin main
+```
