--- a/source/_posts/魔改美化总结-1.md
+++ b/source/_posts/魔改美化总结-1.md
@@ -41,13 +41,13 @@ abbrlink: 20250205mg1
 因为这部分内容轻笑并没有有关于这个内容，所以我在这里写好了，方便以后查找
 
 二.教程开始
-1.在 [BlogRoot]\themes\butterfly\layout\includes\head.pug 中引入 div模块
+1. 在 [BlogRoot]\themes\butterfly\layout\includes\head.pug 中引入 div模块
 ``` pug
 #web_bg
 #svg_bg
 ```
 
-2.在自定义css里面引入以下样式
+2. 在自定义css里面引入以下样式
 ``` css
 #web_bg {
     position: fixed;
@@ -103,10 +103,10 @@ abbrlink: 20250205mg1
 
 {% folding cyan, 请查看教程内容 %}
 
-1.前言
+1. 前言
 因为这部分内容轻笑并没有有关于这个内容，所以我在这里写好了，方便以后查找，喜欢这个风格的可以进行CTRL+C和CTRL+V
 
-2.教程开始
+2. 教程开始
 大部分已经有进行标识，对于以后可以进行维护
 ``` CSS
 /* 侧边栏整体卡片样式调整 */
@@ -185,10 +185,10 @@ abbrlink: 20250205mg1
 {% link 轻笑Chuckle,漫天倾尘 风中轻笑,https://qcqx.cn/ %}
 {% folding cyan, 请查看教程内容 %}
 
-1.前言
+1. 前言
 因为这部分内容轻笑并没有有关于这个内容，所以我在这里写好了，方便以后查找，喜欢这个风格的可以进行CTRL+C和CTRL+V
 
-2.在[BlogRoot]\source\css下新建自定义css并粘贴：
+2. 在[BlogRoot]\source\css下新建自定义css并粘贴：
 ``` CSS
 /* 首页文章卡片样式表调整 */
 #recent-posts > .recent-post-item >.recent-post-info > .article-title {
@@ -434,7 +434,7 @@ abbrlink: 20250205mg1
 
 {% folding cyan, 请查看教程内容 %}
 教程基于清羽飞扬的教程和轻笑的样式进行魔改，感兴趣的可以去看。
-1.在[BlogRoot]\themes\butterfly\layout\includes中新建categoryBar.pug
+1. 在[BlogRoot]\themes\butterfly\layout\includes中新建categoryBar.pug
 ``` PUG
 .home-catalog-bar#catalog-bar
   i.fa-fw.fas.fa-shapes
@@ -446,7 +446,7 @@ abbrlink: 20250205mg1
         a(href=url_for(item.path))= item.name
   a.category-bar-more(href=url_for('/categories/'))= __('更多分类')
 ```
-2.然后将其添加到不同的位置，比如我这里实现了添加到分类页面等位置，配合上pjax可以做到无刷更新，效果很好，打开分类文件地址：[BlogRoot]\themes\butterfly\layout\category.pug和主页文件地址：[BlogRoot]\themes\butterfly\layout\index.pug，添加其中两行代码，去掉加号即为正常缩进。这个和原教程基本一样
+2. 然后将其添加到不同的位置，比如我这里实现了添加到分类页面等位置，配合上pjax可以做到无刷更新，效果很好，打开分类文件地址：[BlogRoot]\themes\butterfly\layout\category.pug和主页文件地址：[BlogRoot]\themes\butterfly\layout\index.pug，添加其中两行代码，去掉加号即为正常缩进。这个和原教程基本一样
 {% tabs 分栏 %}
 
 <!-- tab 分类文件 -->
@@ -490,7 +490,7 @@ block content
 ```
 <!-- endtab -->
 {% endtabs %}
-3.在[BlogRoot]\source\css\custom.css自定义样式的文件中引入如下代码（这是我的，你可以自行微调）：
+3. 在[BlogRoot]\source\css\custom.css自定义样式的文件中引入如下代码（这是我的，你可以自行微调）：
 ```CSS
 /* 首页分类条 */
 .layout #recent-posts .home-catalog-bar {
@@ -596,7 +596,7 @@ block content
     }
 };
 ```
-**然后再在引用部分执行这个函数，在同一个文件，找到下面的函数并添加函数的调用，位置看下方注释：**
+4. 然后再在引用部分执行这个函数，在同一个文件，找到下面的函数并添加函数的调用，位置看下方注释:
 ``` JS
 window.refreshFn = function () {
   initAdjust()
