--- a/source/_posts/魔改美化总结-2.md
+++ b/source/_posts/魔改美化总结-2.md
@@ -2,7 +2,7 @@
 title: 博客魔改教程总结(二)
 description: 从零开始魔改butterfly
 date: '2025-02-07 8:00'
-cover: https://sourceimage.s3.bitiful.net/img/default_cover_37.avif
+cover: 'https://sourceimage.s3.bitiful.net/img/default_cover_37.avif'
 category:
   - hexo
   - butterfly
@@ -10,7 +10,7 @@ tags:
   - hexo
   - butterfly
 top_img: false
-abbrlink: 20250207mg2
+abbrlink: 53464
 ---
 {% note info no-icon flat %}
 **魔改前必看（我当你们都懂了，太细节的就不写在教程中了🤣🤣🤣）**
@@ -21,11 +21,11 @@ abbrlink: 20250207mg2
 5.本帖基于Butterfly主题进行魔改方案编写，因此请读者优先掌握Butterfly主题官方文档的内容后再来进行魔改。
 6.魔改会过程常常引入自定义的css与js文件，方法见Hexo博客添加自定义css和js文件(后续引入)
 **博客搭建与魔改系列教程导航🚥🚥🚥**
-1.[🥬Hexo博客搭建基础教程(一)](https://www.myxz.top/posts/20250205jc1.html)
-2.[🍒Hexo博客搭建基础教程(二)](https://www.myxz.top/posts/20250205jc2.html)
-3.[🥪Hexo博客搭建基础教程(三)](https://www.myxz.top/posts/20250205jc3.html)
-4.[🍀博客魔改教程总结(一)](https://www.myxz.top/posts/20250205mg1.html)
-5.[🍚博客魔改教程总结(二)](https://www.myxz.top/posts/20250207mg2.html) ⇦当前位置🪂
+1.[🥬Hexo博客搭建基础教程(一)](https://www.myxz.top/posts/53084.html)
+2.[🍒Hexo博客搭建基础教程(二)](https://www.myxz.top/posts/53085.html)
+3.[🥪Hexo博客搭建基础教程(三)](https://www.myxz.top/posts/53086.html)
+4.[🍀博客魔改教程总结(一)](https://www.myxz.top/posts/4220.html)
+5.[🍚博客魔改教程总结(二)](https://www.myxz.top/posts/53464.html) ⇦当前位置🪂
 6.[🎋博客魔改教程总结(三)](https://www.myxz.top/posts/20250208mg3.html)
 7.[🥕博客魔改教程总结(四)](https://www.myxz.top/posts/20250205mg4.html)
 8.[🍊博客魔改教程总结(五)](https://www.myxz.top/posts/20250205mg5.html)
