--- a/source/_posts/搭建基础教程-1.md
+++ b/source/_posts/搭建基础教程-1.md
@@ -9,8 +9,27 @@ tags:
   - hexo
   - 搭建
 top_img: false
-abbrlink: 20250205jc1
+abbrlink: 53084
 ---
+{% note info no-icon flat %}
+**魔改前必看（我当你们都懂了，太细节的就不写在教程中了🤣🤣🤣）**
+1.博客魔改有风险，如果博客魔改出问题了又没有备份，可通过此项目查看基础源码进行回滚：[jerryc127/hexo-theme-butterfly](https://github.com/jerryc127/hexo-theme-butterfly)、[ccknbc-actions/blog-butterfly](https://github.com/ccknbc-actions/blog-butterfly).这部分魔改基本上都是大佬们造好的轮子，我按照大佬们的轮子结合自己的喜好进行魔改的，如有侵权请联系删除。
+2.鉴于每个人的根目录名称都不一样，本帖博客根目录一律以[BlogRoot]指代。
+3.本帖涉及魔改源码的内容，会使用diff代码块标识，复制时请不要忘记删除前面的+、-符号。
+4.因为.pug和.styl以及.yml等对缩进要求较为严格，请尽量不要使用记事本等无法提供语法高亮的文本编辑器进行修改。
+5.本帖基于Butterfly主题进行魔改方案编写，因此请读者优先掌握Butterfly主题官方文档的内容后再来进行魔改。
+6.魔改会过程常常引入自定义的css与js文件，方法见Hexo博客添加自定义css和js文件(后续引入)
+**博客搭建与魔改系列教程导航🚥🚥🚥**
+1.[🥬Hexo博客搭建基础教程(一)](https://www.myxz.top/posts/53084.html) ⇦当前位置🪂
+2.[🍒Hexo博客搭建基础教程(二)](https://www.myxz.top/posts/53085.html)
+3.[🥪Hexo博客搭建基础教程(三)](https://www.myxz.top/posts/53086.html)
+4.[🍀博客魔改教程总结(一)](https://www.myxz.top/posts/4220.html)
+5.[🍚博客魔改教程总结(二)](https://www.myxz.top/posts/53464.html)
+6.[🎋博客魔改教程总结(三)](https://www.myxz.top/posts/216506.html)
+7.[🥕博客魔改教程总结(四)](https://www.myxz.top/posts/20250205mg4.html)
+8.[🍊博客魔改教程总结(五)](https://www.myxz.top/posts/20250205mg5.html)
+{% endnote %}
+
 ## 搭建环境
 本文分为本机搭建和云端构建，本机搭建通过在本地搭建好必备环境配备代理工具以及上传仓库；而云端构建通过使用github action来进行操作，用写好的yml代码来进行构建。
 
