--- a/source/_posts/魔改美化总结-1.md
+++ b/source/_posts/魔改美化总结-1.md
@@ -3,7 +3,7 @@ title: 博客魔改教程总结(一)
 description: 从零开始魔改butterfly
 date: '2025-02-05 8:00'
 updated: '2025-03-06 18:00'
-cover: https://sourceimage.s3.bitiful.net/img/default_cover_21.avif
+cover: 'https://sourceimage.s3.bitiful.net/img/default_cover_21.avif'
 category:
   - hexo
   - butterfly
@@ -11,7 +11,7 @@ top_img: false
 tags:
   - hexo
   - butterfly
-abbrlink: 20250205mg1
+abbrlink: 4220
 ---
 {% note info no-icon flat %}
 **魔改前必看（我当你们都懂了，太细节的就不写在教程中了🤣🤣🤣）**
@@ -22,12 +22,12 @@ abbrlink: 20250205mg1
 5.本帖基于Butterfly主题进行魔改方案编写，因此请读者优先掌握Butterfly主题官方文档的内容后再来进行魔改。
 6.魔改会过程常常引入自定义的css与js文件，方法见Hexo博客添加自定义css和js文件(后续引入)
 **博客搭建与魔改系列教程导航🚥🚥🚥**
-1.[🥬Hexo博客搭建基础教程(一)](https://www.myxz.top/posts/20250205jc1.html)
-2.[🍒Hexo博客搭建基础教程(二)](https://www.myxz.top/posts/20250205jc2.html)
-3.[🥪Hexo博客搭建基础教程(三)](https://www.myxz.top/posts/20250205jc3.html)
-4.[🍀博客魔改教程总结(一)](https://www.myxz.top/posts/20250205mg1.html) ⇦当前位置🪂
-5.[🍚博客魔改教程总结(二)](https://www.myxz.top/posts/20250207mg2.html)
-6.[🎋博客魔改教程总结(三)](https://www.myxz.top/posts/20250208mg3.html)
+1.[🥬Hexo博客搭建基础教程(一)](https://www.myxz.top/posts/53084.html)
+2.[🍒Hexo博客搭建基础教程(二)](https://www.myxz.top/posts/53085.html)
+3.[🥪Hexo博客搭建基础教程(三)](https://www.myxz.top/posts/53086.html)
+4.[🍀博客魔改教程总结(一)](https://www.myxz.top/posts/4220.html) ⇦当前位置🪂
+5.[🍚博客魔改教程总结(二)](https://www.myxz.top/posts/53464.html)
+6.[🎋博客魔改教程总结(三)](https://www.myxz.top/posts/216506.html)
 7.[🥕博客魔改教程总结(四)](https://www.myxz.top/posts/20250205mg4.html)
 8.[🍊博客魔改教程总结(五)](https://www.myxz.top/posts/20250205mg5.html)
 {% endnote %}
