--- a/source/_posts/魔改美化总结-3.md
+++ b/source/_posts/魔改美化总结-3.md
@@ -2,7 +2,7 @@
 title: 博客魔改教程总结(三)
 description: 从零开始魔改butterfly
 date: '2025-02-08 8:00'
-cover: https://sourceimage.s3.bitiful.net/img/default_cover_43.avif
+cover: 'https://sourceimage.s3.bitiful.net/img/default_cover_43.avif'
 category:
   - hexo
   - butterfly
@@ -10,7 +10,7 @@ top_img: false
 tags:
   - hexo
   - butterfly
-abbrlink: 20250208mg3
+abbrlink: 16506
 ---
 {% note info no-icon flat %}
 **魔改前必看（我当你们都懂了，太细节的就不写在教程中了🤣🤣🤣）**
@@ -24,9 +24,9 @@ abbrlink: 20250208mg3
 1.[🥬Hexo博客搭建基础教程(一)](https://www.myxz.top/posts/20250205jc1.html)
 2.[🍒Hexo博客搭建基础教程(二)](https://www.myxz.top/posts/20250205jc2.html)
 3.[🥪Hexo博客搭建基础教程(三)](https://www.myxz.top/posts/20250205jc3.html)
-4.[🍀博客魔改教程总结(一)](https://www.myxz.top/posts/20250205mg1.html)
-5.[🍚博客魔改教程总结(二)](https://www.myxz.top/posts/20250207mg2.html)
-6.[🎋博客魔改教程总结(三)](https://www.myxz.top/posts/20250208mg3.html) ⇦当前位置🪂
+4.[🍀博客魔改教程总结(一)](https://www.myxz.top/posts/4220.html)
+5.[🍚博客魔改教程总结(二)](https://www.myxz.top/posts/53464.html)
+6.[🎋博客魔改教程总结(三)](https://www.myxz.top/posts/216506.html) ⇦当前位置🪂
 7.[🥕博客魔改教程总结(四)](https://www.myxz.top/posts/20250205mg4.html)
 8.[🍊博客魔改教程总结(五)](https://www.myxz.top/posts/20250205mg5.html)
 {% endnote %}
