--- a/source/_posts/搭建基础教程-1.md
+++ b/source/_posts/搭建基础教程-1.md
@@ -1,7 +1,8 @@
 ---
 title: Hexo博客搭建基础教程(一)
 description: 从零开始搭建博客
-date: '2025-02-07 8:00'
+date: '2025-03-07 8:00'
+ipdate: '2025-03-25 8:00'
 cover: 'https://sourceimage.s3.bitiful.net/img/default_cover_23.avif'
 category:
   - hexo
