--- a/source/_posts/魔改美化总结-2.md
+++ b/source/_posts/魔改美化总结-2.md
@@ -1,7 +1,8 @@
 ---
 title: 博客魔改教程总结(二)
 description: 从零开始魔改butterfly
-date: '2025-02-07 8:00'
+date: '2025-03-07 8:00'
+ipdate: '2025-03-25 8:00'
 cover: 'https://sourceimage.s3.bitiful.net/img/default_cover_37.avif'
 category:
   - hexo
