--- a/source/_posts/魔改美化总结-3.md
+++ b/source/_posts/魔改美化总结-3.md
@@ -1,7 +1,8 @@
 ---
 title: 博客魔改教程总结(三)
 description: 从零开始魔改butterfly
-date: '2025-02-08 8:00'
+date: '2025-03-08 8:00'
+ipdate: '2025-03-25 8:00'
 cover: 'https://sourceimage.s3.bitiful.net/img/default_cover_43.avif'
 category:
   - hexo
@@ -21,9 +22,9 @@ abbrlink: 16506
 5.本帖基于Butterfly主题进行魔改方案编写，因此请读者优先掌握Butterfly主题官方文档的内容后再来进行魔改。
 6.魔改会过程常常引入自定义的css与js文件，方法见Hexo博客添加自定义css和js文件(后续引入)
 **博客搭建与魔改系列教程导航🚥🚥🚥**
-1.[🥬Hexo博客搭建基础教程(一)](https://www.myxz.top/posts/20250205jc1.html)
-2.[🍒Hexo博客搭建基础教程(二)](https://www.myxz.top/posts/20250205jc2.html)
-3.[🥪Hexo博客搭建基础教程(三)](https://www.myxz.top/posts/20250205jc3.html)
+1.[🥬Hexo博客搭建基础教程(一)](https://www.myxz.top/posts/53084.html)
+2.[🍒Hexo博客搭建基础教程(二)](https://www.myxz.top/posts/53085.html)
+3.[🥪Hexo博客搭建基础教程(三)](https://www.myxz.top/posts/53086.html)
 4.[🍀博客魔改教程总结(一)](https://www.myxz.top/posts/4220.html)
 5.[🍚博客魔改教程总结(二)](https://www.myxz.top/posts/53464.html)
 6.[🎋博客魔改教程总结(三)](https://www.myxz.top/posts/216506.html) ⇦当前位置🪂
