--- a/source/_posts/搭建基础教程-1.md
+++ b/source/_posts/搭建基础教程-1.md
@@ -410,9 +410,9 @@ jobs:
 [](https://cdn.cbd.int/anzhiyu-static@1.0.0/img/01/06.png)
 {% endnote %}
 
-|参数         |  参数内容         |     是否需要     |
-|-------------|------------------|-----------------|
-|HEXO_TOKEN   |  github账号密钥  |       ✅        |
+参数         |  参数内容         |     是否需要     |
+-------------|------------------|-----------------|
+HEXO_TOKEN   |  github账号密钥  |       ✅        |
 
 ### 部署云端
 1. 添加屏蔽项
