--- a/source/_posts/搭建基础教程-2.md
+++ b/source/_posts/搭建基础教程-2.md
@@ -138,27 +138,27 @@ I53.NET 由 L53.NET 提供，支持免费注册二级域名，适用于个人和
 根据我自己的主力域名:myxz.top来说明：
 主机记录   |  解释                                                                |
 -----------|---------------------------------------------------------------------|
-www	   |  解析后的域名为 www.myxz.top，如果@和www一起填写，则按照 myxz.top 跳转 |
-@	       |  直接解析主域名 myxz.top                                              |
-*	       |  泛解析，匹配其他所有域名 *.myxz.top                                  |
-mail	   |  将域名解析为 mail.myxz.top，通常用于解析邮箱服务器                    |
-二级	    |  如 abc.myxz.top，填写 abc                                           |
+www	       |  解析后的域名为 www.myxz.top，如果@和www一起填写，则按照 myxz.top 跳转 |
+@	         |  直接解析主域名 myxz.top                                              |
+*	         |  泛解析，匹配其他所有域名 *.myxz.top                                  |
+mail	     |  将域名解析为 mail.myxz.top，通常用于解析邮箱服务器                    |
+二级	     |  如 abc.myxz.top，填写 abc                                           |
 手机网站   |  如 m.myxz.top，填写m                                                |
-显性URL	|   不支持泛解析（泛解析：将所有子域名解析到同一地址）                    |
+显性URL	   |   不支持泛解析（泛解析：将所有子域名解析到同一地址）                    |
 
 3. 域名解析详情
 将域名指向云服务器，请选择「A」； 将域名指向另一个域名，请选择「CNAME」； 建立邮箱请选择「MX」，根据邮箱服务商提供的 MX 记录填写。
-记录类型	|    解释
-------------|---------------------------------------------------------------------------------------------------------|
-A	       |    用来指定域名的 IPv4 地址（如 8.8.8.8），如果需要将域名指向一个 IP 地址，就需要添加 A 记录。                |
-CNAME	   |    如果需要将域名指向另一个域名，再由另一个域名提供 IP 地址，就需要添加 CNAME 记录。                          |
-MX	       |    如果需要设置邮箱，让邮箱能收到邮件，就需要添加 MX 记录。                                                  |
-TXT	       |    在这里可以填写任何东西，长度限制 255。绝大多数的 TXT 记录是用来做 SPF 记录（反垃圾邮件）                   |
-NS	       |    域名服务器记录，如果需要将子域名交给其他 DNS 服务商解析，就需要添加 NS 记录。                              |
-AAAA	   |    用来指定主机名（或域名）对应的 IPv6 地址（例如：ff06:0:0:0:0:0:0:c3）记录。                               |
-SRV	       |    记录了哪台计算机提供了哪个服务。格式为：服务的名字、点、协议的类型，例如：_xmpp-server_tcp。                |
-显性URL	   |    从一个地址 301 重定向到另一个地址的时候，就需要添加显性 URL 记录（注：DNSPod 目前只支持 301 重定向）。       |
-隐性URL	   |    类似于显性 URL，区别在于隐性 URL 不会改变地址栏的域名。                                                    |
+记录类型	   |    解释                                                                                                  |
+------------|-----------------------------------------------------------------------------------------------------------|
+A	          |    用来指定域名的 IPv4 地址（如 8.8.8.8），如果需要将域名指向一个 IP 地址，就需要添加 A 记录。                |
+CNAME	      |    如果需要将域名指向另一个域名，再由另一个域名提供 IP 地址，就需要添加 CNAME 记录。                          |
+MX	        |    如果需要设置邮箱，让邮箱能收到邮件，就需要添加 MX 记录。                                                  |
+TXT	        |    在这里可以填写任何东西，长度限制 255。绝大多数的 TXT 记录是用来做 SPF 记录（反垃圾邮件）                   |
+NS	        |    域名服务器记录，如果需要将子域名交给其他 DNS 服务商解析，就需要添加 NS 记录。                              |
+AAAA	      |    用来指定主机名（或域名）对应的 IPv6 地址（例如：ff06:0:0:0:0:0:0:c3）记录。                               |
+SRV	        |    记录了哪台计算机提供了哪个服务。格式为：服务的名字、点、协议的类型，例如：_xmpp-server_tcp。                |
+显性URL	    |    从一个地址 301 重定向到另一个地址的时候，就需要添加显性 URL 记录（注：DNSPod 目前只支持 301 重定向）。       |
+隐性URL	    |    类似于显性 URL，区别在于隐性 URL 不会改变地址栏的域名。                                                    |
 
 4. 解析到vercel
 点击Vercel控制面板右上角的View Domains查看当前的域，我们可以看到仅有Vercel给你预分配的一个域名，此时我们输入刚刚购买的域名，我这里以二级域名demo.fomal.cc为例进行说明，添加后他会提示你添加一条DNS解析记录。
@@ -265,3 +265,27 @@ highlight_shrink:
 aside:
 ---
 ```
+写法              |	解释
+title	            |【必需】文章标题
+date	            |【必需】文章创建日期
+updated	          |【可选】文章更新日期
+tags	            |【可选】文章标籤
+categories	      |【可选】文章分类
+keywords	        |【可选】文章关键字
+description	【可选】文章描述
+top_img	【可选】文章顶部图片
+cover	【可选】文章缩略图(如果没有设置top_img,文章页顶部将显示缩略图，可设为false/图片地址/留空)
+comments	【可选】显示文章评论模块(默认 true)
+toc	【可选】显示文章TOC(默认为设置中toc的enable配置)
+toc_number	【可选】显示toc_number(默认为设置中toc的number配置)
+toc_style_simple	【可选】显示 toc 简洁模式
+copyright	【可选】显示文章版权模块(默认为设置中post_copyright的enable配置)
+copyright_author	【可选】文章版权模块的文章作者
+copyright_author_href	【可选】文章版权模块的文章作者链接
+copyright_url	【可选】文章版权模块的文章连结链接
+copyright_info	【可选】文章版权模块的版权声明文字
+mathjax	【可选】显示mathjax(当设置mathjax的per_page: false时，才需要配置，默认 false)
+katex	【可选】显示katex(当设置katex的per_page: false时，才需要配置，默认 false)
+aplayer	【可选】在需要的页面加载aplayer的js和css,请参考文章下面的音乐 配置
+highlight_shrink	【可选】配置代码框是否展开(true/false)(默认为设置中highlight_shrink的配置)
+aside	【可选】显示侧边栏 (默认 true)
