--- a/source/_posts/文章详情信息美化（轻笑版本重制版）.md
+++ b/source/_posts/文章详情信息美化（轻笑版本重制版）.md
@@ -373,7 +373,8 @@ document.addEventListener('DOMContentLoaded', function () {
 });
 ```
 ### pug内嵌js
-在[BlogRoot]\themes\butterfly\layout\includes中添加hexo-js.pug：
+在[BlogRoot]\themes\butterfly\layout\includes中添加hexo-js.pug
+未开启Pjax设置时：
 ``` PUG
 script(type='text/javascript')
   | document.addEventListener('DOMContentLoaded', function () {
@@ -385,6 +386,21 @@ script(type='text/javascript')
   |       }
   |   });
   | });
+```
+开启Pjax设置时：
+```
+script(type='text/javascript')
+  | function initPostBackgrounds() {
+  |   const posts = document.querySelectorAll('#post-info');
+  |   posts.forEach(function (post) {
+  |     const cover = post.getAttribute('data-cover');
+  |     if (cover) {
+  |       post.style.backgroundImage = `url(${cover})`;
+  |     }
+  |   });
+  | }
+  | document.addEventListener('DOMContentLoaded', initPostBackgrounds);
+  | document.addEventListener('pjax:complete', initPostBackgrounds);
 ```
 在[BlogRoot]\themes\butterfly\layout\includes\layout.pug中添加：
 ``` PUG
