--- a/source/_posts/归档-分类-标签三个页面美化以及信息介绍（轻笑重制版）.md
+++ b/source/_posts/归档-分类-标签三个页面美化以及信息介绍（轻笑重制版）.md
@@ -1,12 +1,11 @@
 ---
-title: 归档、分类、标签页文章卡片加上所属分类和标签以及美化页面（轻笑版本重制版）
+title: 给页面加上所属分类和标签以及美化
 description: 给归档、分类、标签页文章卡片加上所属分类和标签以及美化页面
 date: '2025-03-24 8:00'
 updated: '2025-03-24 10:56'
 cover: https://sourceimage.s3.bitiful.net/img/default_cover_37.avif
 category:
   - hexo
-  - butterfly
 tags:
   - hexo
   - butterfly
