--- a/source/_posts/使用多个第三方存储作为图库.md
+++ b/source/_posts/使用多个第三方存储作为图库.md
@@ -1,31 +1,32 @@
 ---
-title: 菜单栏多色动态图标
-description: 对导航栏进行修改，以支持多色图标
+title: 博客基础之静态文件存储
+description: 使用多个第三方存储作为图库或者静态文件进行使用
 date: '2025-04-01 10:00'
 updated: '2025-04-01 12:00'
-cover: https://sourceimage.s3.bitiful.net/img/default_cover_9.avif
+cover: 'https://sourceimage.s3.bitiful.net/img/default_cover_26.avif'
 category:
   - 教程
 top_img: false
 tags:
   - 存储
   - 第三方
+abbrlink: 46760
 ---
-
 ## 前言
 一直以来，我一直想要找一些兼顾空间、读取速度（访问速度）、通用性（可以通过第三方工具或者网页嵌入），经过一段时间找到了一些拥有这些特性的，[缤纷云](https://www.bitiful.com/)无疑就是性价比较高的存储桶，每个月50GB的存储和30GB的请求。那么其他的就不好吗？
 
 其实市面上许多免费的存储桶，但大部分都要加入他们设立的联盟中，大部分加入后也没有去使用（访问速度要不然慢要不然就是空间太小），所以我们可以把这些作为备份搭配一下网盘来进行白嫖。
 
-## 缤纷云S4
-|特点                                      |
-|-----------------------------------------|
-|稳定性好 ✅                               |
-|方便管理图片，上传方便，支持S3存储桶 ✅    |
-|容量取决于服务器 ✅                       |
-|图像处理：如保护源文件，跨域配置等 ✅      |
-|每月50GB存储和30GB请求 ✅                 |
-|无需支付存储桶费用（超过限制要付费）✅      |
+## 各个存储桶平台
+### 缤纷云S4（包含Picgo使用方案）
+|优点                                                    |  缺点
+|:-----------------------------------------------------:|:-----------------------------------------------------:|
+|稳定性好 ✅                                            | CDN加速需要备案                                        |
+|方便管理图片，上传方便，支持S3存储桶 ✅                  | 无法通过链接访问（会被自动下载文件）                    |
+|容量取决于服务器 ✅                                     |                                                       |
+|图像处理：如保护源文件，跨域配置等 ✅                    |                                                       |
+|每月50GB存储和30GB请求 ✅                               |                                                       |
+|无需支付存储桶费用（超过限制要付费）✅                   |                                                       |
 
 访问[https://console.bitiful.com/login](https://console.bitiful.com/login)，按照要求进行注册并登录
 
@@ -39,12 +40,22 @@ tags:
 3. 新建授权子账号
 ![](https://sourceimage.s3.bitiful.net/post%2Fimg%2F20250401%2F3.avif)
 ![](https://sourceimage.s3.bitiful.net/post%2Fimg%2F20250401%2F4.avif)
+![](https://sourceimage.s3.bitiful.net/post%2Fimg%2F20250401%2F5.avif)
 
 4. 配置PicGo
 [PicGo](https://molunerfinn.com/PicGo/)是一个开源免费的全平台的图片入床工具，基本支持了主流的所有图床，配合typora使用更为锦上添花。
+
 - 首先下载好对应系统的PicGo
 - 你可以在PicGo设置里选择隐藏不需要的图床，在图床设置里配置你的图床，这里以缤纷云S4为例，下面是设置一览↓，下面将分别介绍
-查找S3图库插件
+
+**查找S3图库插件：**
 ![](https://sourceimage.s3.bitiful.net/post%2Fimg%2F20250401%2F6.png)
-如何设置S3存储桶
-![](https://sourceimage.s3.bitiful.net/post%2Fimg%2F20250401%2F5.avif)
+
+**如何设置S3存储桶：**
+![](https://sourceimage.s3.bitiful.net/post%2Fimg%2F20250401%2F7.png)
+
+### github图床
+
+
+## 各大管理图片平台
+适合方案图表：
