--- a/source/_posts/公益服务（置顶）.md
+++ b/source/_posts/公益服务（置顶）.md
@@ -15,6 +15,7 @@ abbrlink: public
 ---
 ## 本站公益服务
 下表中为旗下公益服务：
+
 | 序号 | 服务名称                       | 状态/说明                      | 地址                  |
 |------|-------------------------------|-------------------------------|------------------------|
 | 1    | JSD镜像服务                   | 需提交域名过白                  | /posts/jsdmirror.html |
@@ -22,12 +23,13 @@ abbrlink: public
 
 ## 免费域名公益服务
 下表为旗下域名：
-| 序号 | 域名                 | 注册原因                                                       | 是否可申请 |  域名到期时间
-|------|----------------------|---------------------------------------------------------------|------------|----------------|
+
+| 序号 | 域名                 | 注册原因                                                       | 是否可申请 |  域名到期时间    |
+|------|----------------------|---------------------------------------------------------------|------------|-----------------|
 |  1   | anxkj.top            | 第二个博客注册的域名，后因为与某些网站名称相似                   |     ✅    |  2026-01-29     |
-|  2   | kunlly.top           | 目前在用                                                       |     ✅    |  2025-12-10    |
-|  3   | ctgstzk.top          | 某个朋友叫我帮忙注册，后没有使用。                               |     ✅    |  2025-05-12    |
-|  4   | cgetier.top          | 因为名称太难记，所以没用(QWQ)。                                 |      ✅    |  2025-09-08    |   
+|  2   | kunlly.top           | 目前在用                                                       |     ✅    |  2025-12-10     |
+|  3   | ctgstzk.top          | 某个朋友叫我帮忙注册，后没有使用。                               |     ✅    |  2025-05-12     |
+|  4   | cgetier.top          | 因为名称太难记，所以没用(QWQ)。                                 |      ✅    |  2025-09-08     |   
 
 如何注册：
 在本站评论下：
